@@ -3,8 +3,8 @@
     "modName":"LazyLib",
     "modVersion":
     {
-        "major":1,
-        "minor":9,
-        "patch":2
+        "major":2,
+        "minor":0,
+        "patch":0
     }
 }
