@@ -1,11 +1,11 @@
 {
-    "id": "lw_lazylib_nodep",
-    "name": "LazyLib (deprecated methods removed)",
+    "id": "lw_lazylib",
+    "name": "LazyLib",
     "author": "LazyWizard",
     "utility": "true",
-    "version": "1.9b",
-    "description": "A collection of libraries to aid with modding. Not a mod in itself, but required by certain other mods.\n\nThis release is targeted towards Starsector version 0.6.2a, but will most likely work for later point releases.",
-    "gameVersion": "0.6.2a",
+    "version": "2.0",
+    "description": "A collection of classes to aid with modding. Not a mod in itself, but required by certain other mods.\n\nThis release is targeted towards Starsector version 0.65a, but will most likely work for later point releases.",
+    "gameVersion": "0.65a",
     "jars": ["jars/LazyLib.jar"],
     "modPlugin": "org.lazywizard.lazylib.LazyLib"
 }
