@@ -1,16 +1,0 @@
-package org.lazywizard.lazylib.campaign;
-
-/**
- * Contains methods for working with fleets and fleet data.
- *
- * @deprecated Use {@link CampaignUtils} instead.
- * @author LazyWizard
- * @since 1.0
- */
-@Deprecated
-public class FleetUtils extends CampaignUtils
-{
-    private FleetUtils()
-    {
-    }
-}
